--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.project
+.settings/*
+*/.classpath
+*/.project
+*/.settings/*
+*/target/*
+*/bin
+.gitignore
+*/logs/*
